SER-606. Renamed gift-x to announcement-x. Fixed some layout issues. Changed some language.

--- a/modules/front-end/app/assets/stylesheets/_landing_masthead.less
+++ b/modules/front-end/app/assets/stylesheets/_landing_masthead.less
@@ -1,12 +1,13 @@
+// Styles for the masthead of the website landing page.
+
 #masthead-home {
-  @shadow: inset 0 -8px 8px -8px rgba(0, 0, 0, .5);
-  .box-shadow(@shadow);
+  .box-shadow(inset 0 -8px 8px -8px rgba(0, 0, 0, .5));
   
   // Specify all aspects of the background but the image url,
   // which is specified in the actual page.
   background-color: @grayDarker;
   background-repeat: no-repeat;
-  background-position: 50% 40px; // center align  
+  background-position: 50% 0; // center align
   background-size: auto 100%; // scale responsively with masthead height
 
   .banner-gradient {
@@ -15,46 +16,6 @@
     height: 100%;    
   }
 
-  // Styles for the masthead of the website landing page.
-
-  #gift-message {
-    background-color: @grayDarker;
-    text-transform: uppercase;
-    color: #ececec;
-    text-shadow: 0px -1px 1px black;
-    font-size: 16px;
-    line-height: 40px;
-    text-align: center;
-
-    a {
-      margin-left: 7px;
-      text-transform: capitalize;
-      color: @orange;
-      font-weight: 800;
-      border-bottom: 1px dotted @orange;
-      cursor: pointer;
-    }
-
-    span {
-      font-weight: 800;
-    }
-
-    .gift-container {
-      max-width: 1551px;
-      margin: 0 auto;
-      @shadow: 0px 2px 3px -1px rgba(255, 255, 255, 0.15);  
-      .box-shadow(@shadow);
-      background: @grayDark;
-
-      background: -moz-radial-gradient(center, circle farthest-side, @grayDark 20%, rgba(26,26,26,1) 600px); /* FF3.6+ */
-      background: -webkit-radial-gradient(center, circle farthest-side, @grayDark 20%, rgba(26,26,26,1) 600px); /* Chrome10+,Safari5.1+ */
-      background: -o-radial-gradient(center, circle farthest-side, @grayDark 20%, rgba(26,26,26,1) 600px); /* Opera 12+ */
-      background: -ms-radial-gradient(center, circle farthest-side, @grayDark 20%, rgba(26,26,26,1) 600px); /* IE10+ */
-      background: radial-gradient(circle at center, @grayDark 20%, rgba(26,26,26,1) 600px); /* W3C */
-
-    }
-  }
-  
   h1 {
     color: @white;
     font-weight: 300;
@@ -86,7 +47,6 @@
     }
 
     .row { margin-left: -60px; }     
-  
   }
   
   // Put in a radial fade-to-dark-gray for big screens.
@@ -97,7 +57,6 @@
     background: -ms-radial-gradient(center, circle farthest-side, rgba(26,26,26,0) 0%, rgba(26,26,26,0) 500px, rgba(26,26,26,1) 745px); /* IE10+ */
     background: radial-gradient(circle at center, rgba(26,26,26,0) 0%, rgba(26,26,26,0) 500px, rgba(26,26,26,1) 745px); /* W3C */
   }
-
 } // end min-width: 1340px;
 
 @media (min-width: 1080px) {
@@ -119,77 +78,33 @@
 @media (max-width: 1079px) {
   #masthead-home {
     min-height:400px;
-
-    #gift-message {
-      .gift-container{
-        padding: 0 20px 0 20px;  
-      }
-    }
-  
-    form {
-      margin-top: 25px;
-    }
-
-    h1 {
-      margin-top: 0;
-    }  
   }
 }
 
-@media (max-width: 940px) {
-  #masthead-home {
-    background-position: 50% 0;   
-
-    #gift-message {
-      .gift-container {
-        padding: 5px 20px 5px 20px; 
-      }
-
-      line-height: 20px;
-
-      a {
-        display: inline-block;
-        height: 20px;
-      }
-
-    }
-  }  
-}
-
 @media (max-width: 767px) {
-  #masthead-home {      
-    min-height: 400px;
-
-    #gift-message {
-      font-size: 14px;   
-    }
+  #masthead-home {
+    min-height: 300px;
 
     form {
-      margin-top: 20px;
       width: 45%;
     }
 
     h1 {
-      max-width: 75%;
+      max-width:70%;
+    }
+
+    h1 {
+      font-size:38px;
     }
   } // end #masthead-home
 }
 
 @media (max-width:480px) {
   #masthead-home {
-
-    min-height: 300px;
-     background-position: 50% 45px;
-
-    #gift-message {
-      font-size: 14px;
-
-      a {
-        display: inline-block;
-      }
-    }
+    min-height: 250px;
 
     form {
+      margin-top: 20px;
       width : 70%;
       margin-bottom: 20px;
     }
